[package]
name = "actix-metrics"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/Nerixyz/nerix-utils-rs"
description = "Exposes metrics about your server through the metrics crate."
authors = ["Nerixyz"]

[lib]
name = "actix_metrics"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
pin-project = "1.0"
actix-utils = "3.0"
futures = "0.3"
metrics = "0.18"