[package]
name = "errors"
version = "0.2.2"
edition = "2021"
description = "This crate provides common errors when working with actix-web"
authors = ["Nerixyz"]
repository = "https://github.com/Nerixyz/nerix-utils-rs"

[dependencies]
actix-web = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0"
