[package]
name = "errors"
version = "0.3.0"
edition = "2021"
description = "This crate provides common errors when working with actix-web"
authors = ["Nerixyz"]
repository = "https://github.com/Nerixyz/nerix-utils-rs"

[dependencies]
actix-web = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0"

sqlx = { version = "0.7.1", optional = true, default-features = false }
derive_more = { version = "0.99", optional = true }
log = { version = "0.4", optional = true }

[features]
sql-result = ["sqlx", "derive_more"]
sql-log = ["log"]
