[package]
name = "eventsub"
version = "0.1.0"
edition = "2018"
description = "A middleware for actix-web 4 to verify eventsub requests"
authors = ["Nerixyz"]
repository = "https://github.com/Nerixyz/nerix-utils-rs"

[dependencies]
actix-web = "4.0.0-beta.8"
errors = { path = "../errors" }
hmac = "0.11"
chrono = "0.4"
futures = "0.3"
sha2 = "0.9"
hex = "0.4"
async-stream = "0.3"
