[package]
name = "eventsub"
version = "0.2.1"
edition = "2021"
description = "A middleware for actix-web 4 to verify eventsub requests"
authors = ["Nerixyz"]
repository = "https://github.com/Nerixyz/nerix-utils-rs"

[dependencies]
actix-web = "4.0.0-beta.19"
errors = { path = "../errors" }
hmac = "0.12"
chrono = "0.4"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
async-stream = "0.3"


